--- a/Project/PAC-FrontEnd/src/css/NavBar.css
+++ b/Project/PAC-FrontEnd/src/css/NavBar.css
@@ -1,4 +1,3 @@
-/* src/css/NavBar.css */
 .navbar {
   margin: 0 10px; /* Adjusted space around links */
   background-color: white;
@@ -33,8 +32,12 @@
   position: relative;
 }
 
+.nav-link:hover {
+  text-decoration: none; /* Ensure no underline on hover */
+}
+
 .selected {
-  color: #469697  ;
+  color: #469697;
   font-weight: bolder;
 }
 
@@ -74,7 +77,8 @@
 }
 
 .right {
-  margin-left: auto;
+  display: flex;
+  align-items: center;
 }
 
 .login-button {
@@ -84,6 +88,7 @@
   padding: 15px 25px;
   border-radius: 7px;
   cursor: pointer;
+  margin-right: 40px; /* Move the button to the left */
 }
 
 .icon {
